--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@coolpak/ajs",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +19,13 @@
     "url": "https://github.com/CoolPaK/ajs/issues"
   },
   "homepage": "https://github.com/CoolPaK/ajs#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
